# mlops-project

./: pyproject.toml
course/module1/: duration_prediction.ipynb  homework_week_1.ipynb  module_notes.md
course/module2/: duration_prediction.ipynb  duration_prediction_hyperparameters.ipynb  mlflow.db
course/module2/mlruns/1/24b6dbb6ea834207be0b6b71cb891f9b/artifacts/: feature_importance_weight.json
course/module2/mlruns/1/24b6dbb6ea834207be0b6b71cb891f9b/artifacts/model/: MLmodel  conda.yaml  model.xgb  python_env.yaml  requirements.txt
